# spacebar-server-rs

./: .gitignore  Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs  middleware.rs
crates/api/src/models/: login.rs  user.rs
crates/api/src/routes/: mod.rs  ping.rs  stop.rs  track.rs
crates/bundle/src/: main.rs
crates/cdn/: Cargo.toml
crates/cdn/src/: main.rs  routes.rs  signature.rs  storage.rs
crates/connections/: Cargo.toml
crates/connections/src/: main.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: connection.rs  error.rs  main.rs
crates/gateway/src/opcodes/: handlers.rs  mod.rs
crates/util/config/: Cargo.toml
crates/util/config/src/: lib.rs
crates/util/db/: Cargo.toml
crates/util/db/migrations/: 20240101000000_create_config.sql  20240101000001_create_migrations.sql
crates/util/db/src/: lib.rs
crates/util/src/: lib.rs
crates/util/util/: Cargo.toml
crates/util/util/src/: email.rs  json.rs  lib.rs  sentry.rs  webauthn.rs
crates/webrtc/src/: main.rs
