[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4", features = ["limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { path = "../util/config" }
util-db = { path = "../util/db" }
events = { path = "../events" }
sentry = { version = "0.42", features = ["tokio"] }
sentry-tower = { version = "0.42", features = ["http"] }
