[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = "0.3"
mime_guess = "2"
config = { path = "../util/config" }
util-db = { path = "../util/db" }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "postgres", "sqlite", "any"] }
