[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.5"
config = { path = "../util/config" }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
